--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,11 @@
     "zustand": "^4.5.1",
     "date-fns": "^3.3.1",
     "@tanstack/react-query": "^5.20.5",
-    "axios": "^1.6.7"
+    "axios": "^1.6.7",
+    "buffer": "^6.0.3",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@eslint/js": "^8.56.0",
