--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,23 @@
 {
-  "name": "backend",
+  "name": "serverless-saas-backend",
   "version": "1.0.0",
+  "description": "Backend for serverless SaaS application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "deploy": "serverless deploy"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "aws-sdk": "^2.1692.0",
-    "uuid": "^11.1.0"
+    "@aws-sdk/client-dynamodb": "^3.0.0",
+    "@aws-sdk/lib-dynamodb": "^3.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "bcryptjs": "^2.4.3"
+  },
+  "devDependencies": {
+    "serverless": "^3.0.0",
+    "jest": "^29.0.0"
   }
 }
