--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,12 @@ boto3>=1.26.0
 Pillow>=9.5.0  # For image processing
 python-magic-bin>=0.4.14  # For file type detection (Lambda compatible)
 requests>=2.28.2
-pytest>=7.3.1  # For testing
-pytest-cov>=4.1.0  # For test coverage
-black>=23.3.0  # For code formatting
+pytest>=7.0.0
+pytest-cov>=4.0.0
+black>=22.0.0
 flake8>=6.0.0  # For linting
-mypy>=1.3.0  # For type checking 
+mypy>=1.0.0
+types-boto3>=1.0.0
+aws-cdk-lib>=2.0.0
+constructs>=10.0.0
+aws-cdk.aws-lambda-python-alpha>=2.0.0a0 
